# Brain-Disease-Diagnosis

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: lint.yaml
BRAIN DISEASE DIAGNOSIS/: index.html  script.js  style.css
CogniCare/: asgi.py  settings.py  urls.py  wsgi.py
Models/: model.h5
Notebook/: brain-tumor-detection-resnet50.ipynb
backend/: settings.py
core/: models.py
core/migrations/: 0001_initial.py  0002_document.py  0003_delete_document.py
detection/: urls.py  views.py
frontend/: index.html  script.js  style.css
static/src/: output.css
templates/: base.html  catalog.html  contact.html  detection.html  footer.html  header.html  hero.html  index.html  login.html  result.html  signup.html
